@@ -9,7 +9,6 @@ import java.util.Arrays;
 import java.util.InputMismatchException;
 import java.util.List;
 import java.util.Scanner;
-import java.util.stream.Collectors;
 
 public class UI {
     // https://stackoverflow.com/questions/5762491/how-to-print-color-in-console-using-system-out-println
@@ -47,7 +46,7 @@ public class UI {
      */
     public static ChessPosition readChessPosition(Scanner scan) {
         try {
-            String s = scan.nextLine();
+            String s = scan.nextLine().toLowerCase();
             char column = s.charAt(0);
             int row = Integer.parseInt(s.substring(1));
             return new ChessPosition(column, row);
@@ -66,10 +65,14 @@ public class UI {
         printCapturedPieces(captured);
         System.out.println();
         System.out.println("Turno: " + chessMatch.getTurn());
-        System.out.println("Esperando jogador: " + chessMatch.getCurrentPlayer());
-
-        if (chessMatch.getCheck()){
-            System.out.println("CHECK!");
+        if (!chessMatch.getCheckMate()) {
+            System.out.println("Esperando jogador: " + chessMatch.getCurrentPlayer());
+            if (chessMatch.getCheck()) {
+                System.out.println("CHECK!");
+            }
+        } else {
+            System.out.println("CHECKMATE");
+            System.out.println("Vencedor: " + chessMatch.getCurrentPlayer());
         }
     }
 
@@ -130,9 +133,9 @@ public class UI {
      */
     private static void printCapturedPieces(List<ChessPiece> captured) {
         List<ChessPiece> white = captured.stream()
-                .filter(x -> x.getColor() == Color.WHITE).collect(Collectors.toList());
+                .filter(x -> x.getColor() == Color.WHITE).toList();
         List<ChessPiece> black = captured.stream()
-                .filter(x -> x.getColor() == Color.BLACK).collect(Collectors.toList());
+                .filter(x -> x.getColor() == Color.BLACK).toList();
 
         System.out.println("Peças Capturadas");
         System.out.print("White:");
