@@ -8,7 +8,6 @@ import chess.pieces.Rook;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ChessMatch {
     private Board board;
@@ -17,6 +16,7 @@ public class ChessMatch {
     private List<Piece> piecesOnTheBoard = new ArrayList<>();
     private List<Piece> capturedPieces = new ArrayList<>();
     private boolean check;
+    private boolean checkMate;
 
     // Cria um tabuleiro 8x8 e configura as peças iniciais
     public ChessMatch() {
@@ -74,6 +74,9 @@ public class ChessMatch {
             throw new ChessException("Você não pode colocar-se em cheque");
         }
         check = (testCheck(opponent(currentPlayer))) ? true : false;
+        if (testcheckMate(opponent(currentPlayer))){
+            checkMate = true;
+        }
         nextTurn();
         return (ChessPiece) capturedPiece;
     }
@@ -128,10 +131,17 @@ public class ChessMatch {
             piecesOnTheBoard.remove(capturedPiece);
             capturedPieces.add(capturedPiece);
         }
-
         return capturedPiece;
     }
 
+    /**
+     * Reverter uma jogada, movendo a peça de volta para sua casa de origem e,
+     * se uma peça foi capturada, colocá-la de volta no tabuleiro
+     *
+     * @param source:        A posição original da peça que foi movida.
+     * @param target:        A posição de destino para onde a peça foi movida.
+     * @param capturedPiece: A peça que foi capturada durante a jogada. Se nenhuma peça foi capturada, este valor é null.
+     */
     private void undoMove(Position source, Position target, Piece capturedPiece) {
         Piece p = board.removePiece(target);
         board.placePiece(p, source);
@@ -143,14 +153,27 @@ public class ChessMatch {
         }
     }
 
+    /**
+     * Determina a cor do oponente.
+     * Obtem a cor oposta à cor fornecida.
+     *
+     * @param color: A cor do jogador atual (WHITE ou BLACK).
+     * @return Color.BLACK se a cor de entrada for Color.WHITE, e vice-versa.
+     */
     private Color opponent(Color color) {
         return (color == Color.WHITE) ? Color.BLACK : Color.WHITE;
     }
 
+    /**
+     * Localizar a peça do tipo King para uma cor específica.
+     *
+     * @param color: A cor do rei que se deseja encontrar.
+     * @return A instância de ChessPiece que corresponde ao rei da cor especificada.
+     */
     private ChessPiece king(Color color) {
         List<Piece> list = piecesOnTheBoard.stream()
                 .filter(x -> ((ChessPiece) x).getColor() == color)
-                .collect(Collectors.toList());
+                .toList();
 
         for (Piece p : list) {
             if (p instanceof King) {
@@ -160,12 +183,16 @@ public class ChessMatch {
         throw new IllegalStateException("Não há " + color + " rei no tabuleiro");
     }
 
-
+    /**
+     * Determinar se o rei de um jogador está sob ataque direto de qualquer peça adversária
+     *
+     * @param color: A cor do jogador que se quer verificar se está em xeque.
+     * @return true se o rei estiver em xeque; caso contrário, retorna false
+     */
     private boolean testCheck(Color color) {
         Position kingPosition = king(color).getChessPosition().toPosition();
         List<Piece> opponentPieces = piecesOnTheBoard.stream()
-                .filter(x -> ((ChessPiece) x).getColor() == opponent(color))
-                .collect((Collectors.toList()));
+                .filter(x -> ((ChessPiece) x).getColor() == opponent(color)).toList();
 
         for (Piece p : opponentPieces) {
             boolean[][] matriz = p.possibleMoves();
@@ -174,6 +201,33 @@ public class ChessMatch {
             }
         }
         return false;
+    }
+
+    private boolean testcheckMate(Color color) {
+        if (!testCheck(color)) {
+            return false;
+        }
+        List<Piece> list = piecesOnTheBoard.stream()
+                .filter(x -> ((ChessPiece) x).getColor() == color).toList();
+
+        for (Piece p : list) {
+            boolean[][] mat = p.possibleMoves();
+            for (int i = 0; i < board.getRows(); i++) {
+                for (int j = 0; j < board.getColumns(); j++) {
+                    if (mat[i][j]) {
+                        Position source = ((ChessPiece) p).getChessPosition().toPosition();
+                        Position target = new Position(i, j);
+                        Piece capturedPiece = makeMove(source, target);
+                        boolean testCheck = testCheck(color);
+                        undoMove(source, target, capturedPiece);
+                        if (!testCheck) {
+                            return false;
+                        }
+                    }
+                }
+            }
+        }
+        return true;
     }
 
     /**
@@ -190,19 +244,12 @@ public class ChessMatch {
 
     // Coloca as peças nas posições iniciais do jogo
     private void initialSetup() {
-        placeNewPiece('c', 1, new Rook(board, Color.WHITE));
-        placeNewPiece('c', 2, new Rook(board, Color.WHITE));
-        placeNewPiece('d', 2, new Rook(board, Color.WHITE));
-        placeNewPiece('e', 2, new Rook(board, Color.WHITE));
-        placeNewPiece('e', 1, new Rook(board, Color.WHITE));
-        placeNewPiece('d', 1, new King(board, Color.WHITE));
+        placeNewPiece('h', 7, new Rook(board, Color.WHITE));
+        placeNewPiece('d', 1, new Rook(board, Color.WHITE));
+        placeNewPiece('e', 1, new King(board, Color.WHITE));
 
-        placeNewPiece('c', 7, new Rook(board, Color.BLACK));
-        placeNewPiece('c', 8, new Rook(board, Color.BLACK));
-        placeNewPiece('d', 7, new Rook(board, Color.BLACK));
-        placeNewPiece('e', 7, new Rook(board, Color.BLACK));
-        placeNewPiece('e', 8, new Rook(board, Color.BLACK));
-        placeNewPiece('d', 8, new King(board, Color.BLACK));
+        placeNewPiece('b', 8, new Rook(board, Color.BLACK));
+        placeNewPiece('a', 8, new King(board, Color.BLACK));
 
     }
 
@@ -221,5 +268,9 @@ public class ChessMatch {
 
     public boolean getCheck() {
         return check;
+    }
+
+    public boolean getCheckMate() {
+        return checkMate;
     }
 }
